--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "medusa-interfaces": "^1.3.8",
     "medusa-payment-manual": "^1.0.24",
     "medusa-payment-stripe": "^6.0.7",
+    "medusa-plugin-variant-images": "^1.0.5",
     "prism-react-renderer": "^2.0.4",
     "typeorm": "^0.3.16"
   },
